--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <button onclick="loadData()">Load Data</button>
+
+
     <script src="js/fetch.js"></script>
 </body>
 </html>
