--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 <body>
 
     <button onclick="loadData()">Load Data</button>
+    <button onclick="loadData2()">Load Data 2</button>
+    <button onclick="loadUsers()">Load Users</button>
+    <button onclick="loadUsers2()">Load Users 2</button>
 
 
     <script src="js/fetch.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
