--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-
+    <br><br>
     <button onclick="loadData()">Load Data</button>
     <button onclick="loadData2()">Load Data 2</button>
     <button onclick="loadUsers()">Load Users</button>
     <button onclick="loadUsers2()">Load Users 2</button>
+    <br><br><br>
+    <button onclick="loadUsers3()">Load Users 3</button>
+
+    <div class="users-container">
+        <ul id="users-list">
+
+        </ul>
+    </div>
 
 
     <script src="js/fetch.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
