--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <br><br>
+    <!-- ************************************************************** -->
+    <br>Console e output (fetch.js and app.js)<br>
     <button onclick="loadData()">Load Data</button>
     <button onclick="loadData2()">Load Data 2</button>
     <button onclick="loadUsers()">Load Users</button>
     <button onclick="loadUsers2()">Load Users 2</button>
-    <br><br><br>
-    <button onclick="loadUsers3()">Load Users 3</button>
 
+
+    <!-- ************************************************************** -->
+
+    <br><br><br>web page e output (index.js)<br>
+    <button onclick="loadUsers3()">Load Users 3</button>
+    
     <div class="users-container">
         <ul id="users-list">
 
         </ul>
     </div>
+
+
+
+
 
 
     <script src="js/fetch.js"></script>
