--- a/02-index-(fetch.js--app.js--index.js)/01-index-(fetch.js--app.js--index.js).html
+++ b/02-index-(fetch.js--app.js--index.js)/01-index-(fetch.js--app.js--index.js).html
@@ -30,8 +30,8 @@
 
 
 
-    <script src="js/fetch.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/index.js"></script>
+    <script src="fetch.js"></script>
+    <script src="app.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
